.templates/demo-app/k8s/base/deployment_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  labels:
    app: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: app
        image: clearroute/demo-app:0.0.0-000000
        ports:
        - containerPort: 3000
