.templates/demo-app/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-frontend
  labels:
    component: frontend
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
